# In_Silico_Heart_Models

./: Process.sh  README.md  build_folders.py  mat2fem.py  mat2fem.sh  msh2carp.c  risk_strat_1_16.sh  run_matlab.sh  software.sh  sw_req.sh
Convertion_Process/: make_surface_all.sh
Manual/: files&folders.md
Matlab_Process/: SaveMhd.m  alignAll.m  run_matlab.sh
Scar_Process/: run.sh
Scar_Process/ScarProcessing/: CMakeLists.txt  ScarProcessing.cxx
Step_1/: sw_req.sh
seg/: Patient_1.mat  Patient_10.mat  Patient_11.mat  Patient_12.mat  Patient_13.mat  Patient_14.mat  Patient_15.mat  Patient_16.mat  Patient_17.mat  Patient_18.mat  Patient_19.mat  Patient_2.mat  Patient_20.mat  Patient_21.mat  Patient_22.mat  Patient_24.mat  Patient_25.mat  Patient_26.mat  Patient_27.mat  Patient_28.mat  Patient_29.mat  Patient_3.mat  Patient_4.mat  Patient_5.mat  Patient_6.mat  Patient_7.mat  Patient_8.mat  Patient_9.mat
